--- a/index.ipynb
+++ b/index.ipynb
@@ -127,19 +127,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "SELECT customerId\n",
-    "FROM customers\n",
-    "WHERE customerId IN (SELECT customerId\n",
-    "                     FROM orders\n",
-    "                     WHERE quantityOrder > 2 )\n",
-    "\n",
-    "\n",
-    "SELECT c.name, COUNT(DISTINCT o.OrderDate) as NumOrderDates \n",
-    "FROM (SELECT c.name, o.quantity \n",
-    "      FROM Customers c\n",
-    "      JOIN Orders o ON c.orderNumber = o.OrderNumber\n",
+    "'''\n",
+    "SELECT c.customerName, COUNT(DISTINCT o.orderDate) AS numOrderDates \n",
+    "FROM (SELECT c.customerName, o.quantity \n",
+    "      FROM customers c\n",
+    "      JOIN orders o ON c.orderNumber = o.orderNumber\n",
     "      WHERE o.quantity > 1)\n",
-    "WHERE NumOrderDates > 1"
+    "WHERE numOrderDates > 1;\n",
+    "'''"
    ]
   },
   {
@@ -176,7 +171,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "'''\n",
+    "SELECT d.NAME, COUNT(e.ID) AS numEmployees\n",
+    "FROM Employee e\n",
+    "JOIN Department d USING (DEPT_ID)\n",
+    "ORDER BY numEmployees DESC;\n",
+    "'''"
    ]
   },
   {
